# EmoPlay

./: .gitignore  LICENSE  README.md  abox_fill.py  character.py  features_extractor.py  main.py  play.py  point_biserial_calculation.py  pyproject.toml  readme.md  requirements.txt  senticnet.py  speech.py  vizualisation.py
data/: features_extractor_example.csv
example_csv/: Romeo and Juliet - Exported.csv  The Devil - Exported.csv
html/EmoPlay/: character.html  index.html  main.html  play.html  senticnet.html  speech.html  vizualisation.html
ontology/: psy_model_edit.rdf
theater/: romeo-and-juliet_TEIsimple_FolgerShakespeare.xml
